--- a/BlightnautsDialogue/BlightnautsDialogue.csproj
+++ b/BlightnautsDialogue/BlightnautsDialogue.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>FormEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProjectManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveManager.cs" />
     <EmbeddedResource Include="FormEditor.resx">
