--- a/BlightnautsDialogue/BlightnautsDialogue.csproj
+++ b/BlightnautsDialogue/BlightnautsDialogue.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="LegacyLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
