--- a/BlightnautsDialogue/BlightnautsDialogue.csproj
+++ b/BlightnautsDialogue/BlightnautsDialogue.csproj
@@ -58,6 +58,12 @@
     </Compile>
     <Compile Include="Exporter.cs" />
     <Compile Include="ImageLoader.cs" />
+    <Compile Include="LegacyImportWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LegacyImportWindow.Designer.cs">
+      <DependentUpon>LegacyImportWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="MapList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +81,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="EditorWindow.resx">
       <DependentUpon>EditorWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LegacyImportWindow.resx">
+      <DependentUpon>LegacyImportWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MapList.resx">
       <DependentUpon>MapList.cs</DependentUpon>
