Add settings file management

--- a/BlightnautsDialogue/BlightnautsDialogue.csproj
+++ b/BlightnautsDialogue/BlightnautsDialogue.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="ProjectManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="EditorWindow.resx">
       <DependentUpon>EditorWindow.cs</DependentUpon>
     </EmbeddedResource>
